--- a/demo19.html
+++ b/demo19.html
@@ -4,30 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎬 Advanced Movie Recommender</title>
+    <title>🌟 Telugu Movie Recommendation App</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             max-width: 900px;
             margin: 40px auto;
-            padding: 0 20px;
             background-color: #f4f4f4;
             text-align: center;
         }
 
-        h1 {
+        h1, h2 {
             color: #333;
         }
 
+        label,
+        input,
+        select,
         button {
-            padding: 12px 24px;
-            font-size: 18px;
-            background-color: #2d89ef;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-bottom: 30px;
+            margin: 8px;
+            padding: 10px;
+            font-size: 16px;
         }
 
         .movie-card {
@@ -35,97 +32,203 @@
             align-items: center;
             background-color: white;
             border-radius: 10px;
-            padding: 20px;
-            margin-top: 20px;
+            padding: 15px;
+            margin: 15px 0;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
         }
 
         .movie-card img {
-            width: 150px;
-            border-radius: 8px;
+            width: 100px;
+            border-radius: 5px;
             margin-right: 20px;
         }
 
-        .movie-info {
+        #movieModal {
+            display: none;
+            position: fixed;
+            top: 10%;
+            left: 10%;
+            width: 80%;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+            z-index: 1000;
+        }
+
+        #movieModal img {
+            width: 300px;
+            display: block;
+            margin: 0 auto;
+        }
+
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 500;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
             text-align: left;
         }
 
-        .movie-info h2 {
-            margin: 0 0 10px;
-            color: #2d89ef;
-        }
-
-        .movie-info p {
-            margin: 5px 0;
+        ul li {
+            padding: 5px 0;
         }
     </style>
 </head>
 
 <body>
 
-    <h1>🎥 Advanced Movie Recommendation</h1>
-    <button onclick="recommendMovie()">Recommend Me a Movie 🍿</button>
+    <h1>🎥 Telugu Movie Recommendations</h1>
 
-    <div id="movieDisplay"></div>
+    <!-- Genre Filter -->
+    <div>
+        <label><input type="checkbox" value="Action"> Action</label>
+        <label><input type="checkbox" value="Drama"> Drama</label>
+        <label><input type="checkbox" value="Thriller"> Thriller</label>
+        <label><input type="checkbox" value="Period"> Period</label>
+        <label><input type="checkbox" value="Fantasy"> Fantasy</label>
+        <label><input type="checkbox" value="Romance"> Romance</label>
+        <label><input type="checkbox" value="Comedy"> Comedy</label>
+        <label><input type="checkbox" value="Biography"> Biography</label>
+    </div>
+
+    <!-- Sort Dropdown -->
+    <select id="sortSelect">
+        <option value="rating">Sort by Rating ↓</option>
+        <option value="year">Sort by Year ↓</option>
+    </select>
+
+    <button onclick="applyFilters()">Apply Filters & Sort</button>
+
+    <!-- Movie Cards -->
+    <div id="movieList"></div>
+
+    <!-- Watchlist -->
+    <h2>📋 Watchlist</h2>
+    <div id="watchlist"></div>
+
+    <!-- List of Movie Names -->
+    <h2>🎬 All Telugu Movies</h2>
+    <ul id="movieNames"></ul>
+
+    <div id="overlay" onclick="closeModal()"></div>
+
+    <!-- Modal -->
+    <div id="movieModal">
+        <span style="float:right;cursor:pointer;" onclick="closeModal()">❌ Close</span>
+        <div id="modalContent"></div>
+    </div>
 
     <script>
         const movies = [
-            {
-                title: "Kalki-2898AD",
-                year: 2024,
-                genre: "Sci-Fi, Thriller",
-                rating: "8.8/10",
-                poster: "kalki.jpg"
-            },
-            {
-                title: "Adipurush",
-                year: 2023,
-                genre: "Mythology,Drama",
-                rating: "9.3/10",
-                poster: "adi.jpg"
-            },
-            {
-                title: "Saaho",
-                year: 2018,
-                genre: "Action,Drama,Crime",
-                rating: "8.6/10",
-                poster: "saaho.jpg"
-            },
-            {
-                title: "Rajasaab",
-                year: 2025,
-                genre: "Comedy,horror,thriller",
-                rating: "9.0/10",
-                poster: "raja.jpg"
-            },
-            {
-                title: "Bahubali2 -The Conclusion ",
-                year: 2017,
-                genre: "periodic, Drama",
-                rating: "8.6/10",
-                poster: "bahubali.jpg"
-            }
+            { title: "Baahubali 2: The Conclusion", year: 2017, genre: "Period Drama Action", rating: 8.6, poster: "https://m.media-amazon.com/images/I/91IwWJpP3lL._AC_SL1500_.jpg", description: "Epic conclusion of Bahubali saga.", trailer: "https://www.youtube.com/watch?v=sOEg_YZQsTI" },
+            { title: "RRR", year: 2022, genre: "Action Drama", rating: 8.0, poster: "https://upload.wikimedia.org/wikipedia/en/f/f9/RRR_2022_film_poster.jpg", description: "Fictional story of two freedom fighters.", trailer: "https://www.youtube.com/watch?v=1z8wF4kLsW0" },
+            { title: "Sye", year: 2004, genre: "Action Drama", rating: 7.6, poster: "https://upload.wikimedia.org/wikipedia/en/b/b2/Sye_telugu_poster.jpg", description: "College rivalry meets rugby sports drama.", trailer: "https://www.youtube.com/watch?v=c21X0x7vQOE" },
+            { title: "Mahanati", year: 2018, genre: "Biography Period Drama", rating: 8.5, poster: "https://upload.wikimedia.org/wikipedia/en/0/05/Mahanati_film_poster.jpg", description: "Life of legendary actress Savitri.", trailer: "https://www.youtube.com/watch?v=yUBvL7iHZ68" },
+            { title: "Arjun Reddy", year: 2017, genre: "Romance Drama", rating: 8.1, poster: "https://upload.wikimedia.org/wikipedia/en/f/f9/Arjun_Reddy_film_poster.jpg", description: "Rebellious surgeon faces heartbreak.", trailer: "https://www.youtube.com/watch?v=onfNO3Qt4no" },
+            { title: "Magadheera", year: 2009, genre: "Action Romance Fantasy", rating: 8.1, poster: "https://upload.wikimedia.org/wikipedia/en/0/0a/Magadheera.jpg", description: "Epic reincarnation-themed action romance.", trailer: "https://www.youtube.com/watch?v=RkWl0G2E6d4" },
+            { title: "Eega", year: 2012, genre: "Fantasy Thriller", rating: 7.7, poster: "https://upload.wikimedia.org/wikipedia/en/e/e0/Eega_film.jpg", description: "Man reincarnates as a fly to take revenge.", trailer: "https://www.youtube.com/watch?v=G6Jg9NfTiI0" },
+            { title: "Jersey", year: 2019, genre: "Sports Drama", rating: 8.4, poster: "https://upload.wikimedia.org/wikipedia/en/f/f5/Jersey_2019_poster.jpg", description: "A cricketer's comeback story.", trailer: "https://www.youtube.com/watch?v=1eYylKj8gYA" },
+            { title: "C/o Kancharapalem", year: 2018, genre: "Drama Romance", rating: 8.4, poster: "https://upload.wikimedia.org/wikipedia/en/1/1e/Co_Kancharapalem.jpg", description: "Small town love stories.", trailer: "https://www.youtube.com/watch?v=1QWyjHPm8eE" },
+            { title: "Kshanam", year: 2016, genre: "Thriller Drama", rating: 7.9, poster: "https://upload.wikimedia.org/wikipedia/en/c/c6/Kshanam_film.jpg", description: "Thriller about a missing girl.", trailer: "https://www.youtube.com/watch?v=aS1p7hqGFeE" },
+            { title: "Vedam", year: 2010, genre: "Drama Action", rating: 8.1, poster: "https://upload.wikimedia.org/wikipedia/en/1/12/Vedam_2010.jpg", description: "Intersecting stories of different people.", trailer: "https://www.youtube.com/watch?v=QyJfJykHzPQ" },
+            { title: "Athadu", year: 2005, genre: "Action Thriller", rating: 8.2, poster: "https://upload.wikimedia.org/wikipedia/en/e/ea/Athadu_poster.jpg", description: "Hitman story with unexpected twists.", trailer: "https://www.youtube.com/watch?v=2OqMxq-9ak8" },
+            { title: "Attarintiki Daredi", year: 2013, genre: "Action Comedy Drama", rating: 7.8, poster: "https://upload.wikimedia.org/wikipedia/en/e/e5/Attarintiki_Daredi_poster.jpg", description: "Family reunion story with humor.", trailer: "https://www.youtube.com/watch?v=9WakZgquvTk" },
+            { title: "Sankarabharanam", year: 1980, genre: "Drama Music", rating: 8.2, poster: "https://upload.wikimedia.org/wikipedia/en/0/0f/Sankarabharanam.jpg", description: "Classic musical drama.", trailer: "https://www.youtube.com/watch?v=example" },
+            { title: "Pokiri", year: 2006, genre: "Action Thriller", rating: 7.9, poster: "https://upload.wikimedia.org/wikipedia/en/e/e6/Pokiri_film.jpg", description: "Rogue cop action thriller.", trailer: "https://www.youtube.com/watch?v=example" },
+            { title: "Bommarillu", year: 2006, genre: "Romance Comedy", rating: 7.8, poster: "https://upload.wikimedia.org/wikipedia/en/9/94/Bommarillu.jpg", description: "Love story with family drama.", trailer: "https://www.youtube.com/watch?v=example" },
+            { title: "Malliswari", year: 2004, genre: "Romance Comedy", rating: 7.5, poster: "https://upload.wikimedia.org/wikipedia/en/e/e3/Malliswari.jpg", description: "Romantic comedy classic.", trailer: "https://www.youtube.com/watch?v=example" },
+            { title: "Sye Raa Narasimha Reddy", year: 2019, genre: "Action Period Drama", rating: 7.9, poster: "https://upload.wikimedia.org/wikipedia/en/6/66/Sye_Raa_Narasimha_Reddy.jpg", description: "Historical freedom fighter drama.", trailer: "https://www.youtube.com/watch?v=example" },
+            { title: "Rangasthalam", year: 2018, genre: "Action Drama", rating: 8.0, poster: "https://upload.wikimedia.org/wikipedia/en/6/6f/Rangasthalam_film.jpg", description: "Village political drama.", trailer: "https://www.youtube.com/watch?v=example" },
+            { title: "Fidaa", year: 2017, genre: "Romance Drama", rating: 7.8, poster: "https://upload.wikimedia.org/wikipedia/en/5/5f/Fidaa_film.jpg", description: "Heartwarming love story.", trailer: "https://www.youtube.com/watch?v=example" }
         ];
 
-        function recommendMovie() {
-            const randomIndex = Math.floor(Math.random() * movies.length);
-            const movie = movies[randomIndex];
+        // Filter & sort
+        function applyFilters() {
+            const selectedGenres = Array.from(document.querySelectorAll('input[type="checkbox"]:checked')).map(e => e.value.toLowerCase());
+            const sortKey = document.getElementById('sortSelect').value;
 
-            const movieHTML = `
-                <div class="movie-card">
-                    <img src="${movie.poster}" alt="${movie.title} Poster">
-                    <div class="movie-info">
-                        <h2>${movie.title} (${movie.year})</h2>
-                        <p><strong>Genre:</strong> ${movie.genre}</p>
-                        <p><strong>Rating:</strong> ${movie.rating}</p>
+            let filtered = movies.filter(m => selectedGenres.every(g => m.genre.toLowerCase().includes(g)));
+
+            filtered.sort((a, b) => b[sortKey] - a[sortKey]);
+
+            renderMovies(filtered);
+        }
+
+        // Render movie cards
+        function renderMovies(list) {
+            const html = list.map(m => `
+                <div class="movie-card" onclick="openModal('${m.title}')">
+                    <img src="${m.poster}" alt="${m.title}">
+                    <div>
+                        <h3>${m.title} (${m.year})</h3>
+                        <p>⭐ ${m.rating} | ${m.genre}</p>
+                        <button onclick="addToWatchlist(event, '${m.title}', '${m.poster}', ${m.year})">➕ Add to Watchlist</button>
                     </div>
                 </div>
-            `;
+            `).join('');
 
-            document.getElementById('movieDisplay').innerHTML = movieHTML;
+            document.getElementById('movieList').innerHTML = html;
         }
-    </script>
 
+        // Watchlist functions
+        function addToWatchlist(event, title, poster, year) {
+            event.stopPropagation();
+            const watchlist = JSON.parse(localStorage.getItem('watchlist')) || [];
+            if(!watchlist.some(m => m.title === title)) {
+                watchlist.push({ title, poster, year });
+                localStorage.setItem('watchlist', JSON.stringify(watchlist));
+                renderWatchlist();
+            }
+        }
+
+        function renderWatchlist() {
+            const list = JSON.parse(localStorage.getItem('watchlist')) || [];
+            const html = list.map(m => `<div><img src="${m.poster}" width="50"> ${m.title} (${m.year})</div>`).join('');
+            document.getElementById('watchlist').innerHTML = html;
+        }
+
+        // Modal
+        function openModal(title) {
+            const movie = movies.find(m => m.title === title);
+            document.getElementById('modalContent').innerHTML = `
+                <h2>${movie.title} (${movie.year})</h2>
+                <img src="${movie.poster}" width="300">
+                <p>${movie.description}</p>
+                <a href="${movie.trailer}" target="_blank">▶️ Watch Trailer</a>
+            `;
+            document.getElementById('movieModal').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function closeModal() {
+            document.getElementById('movieModal').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
+
+        // Display all movie names
+        function displayMovieNames() {
+            const movieNames = movies.map(m => `<li>${m.title} (${m.year})</li>`).join('');
+            document.getElementById('movieNames').innerHTML = movieNames;
+        }
+
+        // Page load
+        window.onload = () => {
+            renderMovies(movies);
+            renderWatchlist();
+            displayMovieNames();
+        };
+    </script>
 </body>
 
 </html>
